storage/managed-disks/CreateVMFromImage-azuredeploy.json
{
  "$schema": "https://rimcorearm.blob.core.windows.net/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "vmName": {
      "type": "string",
      "metadata": {
        "description": "Name of the Virtual Machine."
      }
    },
    "domainNameLabelPrefix": {
      "type": "string",
      "metadata": {
        "description": "Prefix for the domain name label."
      }
    },
    "imageName": {
      "type": "string",
      "metadata": {
        "description": "Name of the Managed Image."
      }
    },
    "computerName": {
      "type": "string",
      "metadata": {
        "description": "Name of the computer."
      }
    },
    "adminUsername": {
      "type": "string",
      "metadata": {
        "description": "Administrator username."
      }
    },
    "adminPassword": {
      "type": "securestring",
      "metadata": {
        "description": "Administrator password."
      }
    }
  },
  "variables": {
    "publicIpAddressName": "[concat(parameters('vmName'), '-pip')]",
    "vnetName": "[concat(parameters('vmName'), '-vnet')]",
    "vnetAddressPrefix": "10.0.0.0/27",
    "vnetSubnetName": "default",
    "nsgName": "[concat(parameters('vmName'), '-nsg')]",
    "nicName": "[concat(parameters('vmName'), '-nic')]",
    "vmSize": "Standard_D2_v3",
    "scheduleName": "[concat('shutdown-computevm-', parameters('vmName'))]"
  },
  "resources": [
    {
      "comments": "Create a Public IP Address",
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2017-10-01",
      "name": "[variables('publicIPAddressName')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "publicIPAllocationMethod": "Dynamic",
        "dnsSettings": {
          "domainNameLabel": "[parameters('domainNameLabelPrefix')]"
        }
      }
    },
    {
      "comments": "Create a Virtual Network",
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2017-10-01",
      "name": "[variables('vnetName')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('vnetAddressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('vnetSubnetName')]",
            "properties": {
              "addressPrefix": "[variables('vnetAddressPrefix')]"
            }
          }
        ]
      }
    },
    {
      "comments": "Create a Network Security Group",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2017-10-01",
      "name": "[variables('nsgName')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowRDPSSHInBound",
            "properties": {
              "priority": 1000,
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRanges": [
                "22",
                "3389"
              ],
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound"
            }
          },
          {
            "name": "AllowHttpHttpsInBound",
            "properties": {
              "priority": 1100,
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRanges": [
                "80",
                "443"
              ],
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound"
            }
          }
        ]
      }
    }, 
    {
      "comments": "Create a Network Interface",
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2017-10-01",
      "name": "[variables('nicName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/', variables('vnetName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups/', variables('nsgName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddressName'))]"
              },
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'), variables('vnetSubnetName'))]"         
              }
            }
          }
        ],
        "networkSecurityGroup": { 
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]" 
        }     
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2017-12-01",
      "name": "[parameters('vmName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces/', variables('nicName'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('vmSize')]"
        },
        "osProfile": {
          "computerName": "[parameters('computerName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "id": "[resourceId('Microsoft.Compute/images', parameters('imageName'))]"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('nicName'))]"
            }
          ]
        }
      }
    },
    {
      "comments": "Create an auto-shutdown schedule",
      "type": "Microsoft.DevTestLab/schedules",
      "name": "[variables('scheduleName')]",
      "apiVersion": "2016-05-15",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[concat('Microsoft.Compute/virtualMachines/', parameters('vmName'))]"
      ],
      "properties": {
        "status": "Enabled",
        "taskType": "ComputeVmShutdownTask",
        "dailyRecurrence": {
          "time": "1900"
        },
        "timeZoneId": "Eastern Standard Time",
        "targetResourceId": "[resourceId('Microsoft.Compute/virtualMachines', parameters('vmName'))]"
      }
    }
  ],
  "outputs": {
  }
}
